# mcp_weather

./: pyproject.toml  requirements.txt
weather_server/: geolocation.py  server.py  weather.py
