[project]
name = "weather-mcp-server"
version = "1.0.0"
description = "MCP server for weather information using open-meteo.com"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.8"

[project.scripts]
weather-mcp-server = "weather_server.server:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
